[package]
name = "rapidus"
version = "0.1.1"
authors = ["uint256_t <maekawatoshiki@github.com>"]

[dependencies]
clap = "*"
bitflags = "*"
libc = "0.2"
rand = "*"
llvm-sys = "60.0.0"
ansi_term = "0.9.0"
nix = "*"
encoding = "*"
rustc-hash = "*"

[profile.dev]
codegen-units = 16

[profile.release]
codegen-units = 16
opt-level = 3
debug = false
lto = true
debug-assertions = false
panic = "unwind"
