[package]
name = "rapidus"
version = "0.1.1"
authors = ["uint256_t <maekawatoshiki@github.com>"]
edition = "2018"

[dependencies]
clap = "*"
bitflags = "*"
libc = "0.2"
rand = "0.5.5"
#llvm-sys = "70.0.0"
ansi_term = "0.9.0"
nix = "*"
encoding = "*"
rustc-hash = "*"
rustyline = "4.1.0"
libloading = "0.5"
chrono = "0.4"
stopwatch = "0.0.7"
nanbox = "0.2.0"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
panic = "unwind"
