[package]
name = "rapidus-core"
version = "0.1.1"
authors = ["uint256_t <maekawatoshiki@github.com>"]
edition = "2021"

[dependencies]
rapidus-lexer = { path = "../lexer" }
rapidus-parser = { path = "../parser" }
rapidus-ast = { path = "../ast" }
bitflags = "*"
libc = "0.2"
rand = "0.5.5"
#llvm-sys = "70.0.0"
ansi_term = "0.9.0"
nix = "*"
encoding = "*"
rustc-hash = "*"
libloading = "0.5"
chrono = "0.4"
stopwatch = "0.0.7"
nanbox = "0.2.0"
