[package]
name = "rapidus_eval"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
ecow = { workspace = true }
rapidus_ast = { path = "../rapidus_ast" }

[dev-dependencies]
color-backtrace = "0.6.0"
env_logger = "0.10.0"
glob = "0.3.1"
indicatif = "0.17.6"
insta = "1.31.0"
structopt = "0.3.26"
rapidus_parser = { path = "../rapidus_parser" }
